# dnamrnaseq-2026

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  STUDY_OUTCOME.md  Snakefile  config.yaml.example  environment.yml  pyproject.toml
.github/workflows/: ci.yml  r-bioc.yml  smoke-pipeline.yml
analysis/: README.md
analysis/2026-05-17-phase-0/0-C/: gate_0C_results.json  results.md
analysis/2026-05-17-phase-0/0-S/: gate_0S_classifier.json  results.md
analysis/2026-05-17-phase-0/0-T/: gate_0T_results.json  results.md
analysis/2026-05-17-phase-0/0-X/: gate_0X_centroids.json  results.md
analysis/2026-05-17-phase-0/gate_t_rerun_celldmc/: results.md
analysis/2026-05-17-phase-1/1.1/: results.md
docs/: ANALYSIS_PLAN.md
envs/: r-bioc.yml
manuscript/: README.md
notebooks/: README.md
scripts/: 00_load_data.py  01_phase0_gate_C.py  01_phase0_gate_S.py  01_phase0_gate_T.py  01_phase0_gate_X.py  01_phase0_gate_t_rerun_celldmc.py  11_phase1_epidish.py  12_phase1_celldmc.py  13_phase1_rnaseq_de.py  14_phase1_pathway_activity.py  15_phase1_tf_activity.py  16_phase1_regulatory_enrichment.py  17_phase1_replication.py  18_celldmc_enrichment_per_celltype.py  19_best_celldmc_and_replication.py  20_phase2_train_embedding.py  21_phase2_leaderboard.py  22_phase2_build_feature_matrices.py  23_phase2_arm_b_run.py  30_phase3_project_external_cohorts.py  download_external.py
scripts/snakemake/: load_cohort.py
src/dnamrnaseq2026/: __init__.py
tests/: conftest.py  phase2_fixtures.py  phase3_fixtures.py  test_gse98793_loader.py  test_loaders.py  test_phase0_gate_t_rerun.py  test_phase0_gates.py  test_phase1_modules.py  test_phase1_step12_pdata_paired.py  test_phase1_step18_19.py  test_phase2_arm_ac_run.py  test_phase2_arm_b_run.py  test_phase2_arms.py  test_phase2_harness.py  test_phase2_metrics.py  test_phase2_partial_nan.py  test_phase2_provenance_enforcement.py  test_phase2_real_data.py  test_phase3_external_projection.py  test_phase3_proximity.py  test_r_bioc_smoke.py
tests/fixtures/: generate_synthetic.py
workflow/envs/: python-scientific.yaml  r-bioconductor.yaml
workflow/rules/: embedding.smk  external_projection.smk  manuscript_figures.smk  mediation.smk  preprocessing.smk  trajectory.smk
workflow/schemas/: config.schema.yaml
workflow/scripts/: load_cohort.R  run_celldmc.R  run_epidish.R
(+46 files in other folders)
